# smart-tourist

./: .env  .env.local  .gitignore  Anchor.toml  Cargo.toml  README.md  TEMPORARY_ACCESS_NFT_README.md  hardhat.config.cjs  hardhat.config.ts  jest.config.cjs  next.config.cjs  next.config.js  package-lock.json  package.json  solana-deployment.json  tailwind.config.ts  tsconfig.json
.next/: react-loadable-manifest.json  trace
.next/cache/: .tsbuildinfo
.next/server/: _error.js  middleware-react-loadable-manifest.js
.next/server/pages/: _app.js  _error.js  index.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/chunks/: _error.js  node_modules_react-leaflet_lib_index_js.js  webpack.js
.next/static/webpack/: webpack.4b285cae69f293b6.hot-update.js
__tests__/: Hero.test.tsx
cache/: solidity-files-cache.json
contracts/: SimpleVendorRegistry.sol  StandaloneBookingEscrow.sol
pages/: _app.tsx  index.tsx
programs/temporary-access-nft/: Cargo.toml
programs/temporary-access-nft/src/: lib.rs
scripts/: deploy-solana.ts  deploy-standalone.ts  deploy-temporary-access-nft.ts  sample-usage.ts
src/components/: FloatingParticles.tsx  Footer.tsx  Header.tsx  Hero.tsx  Sidebar.tsx  SolutionsGrid.tsx
src/utils/: contracts.ts  hotelApi.ts  ipfs.ts
styles/: globals.css  variables.css
tests/: temporary-access-nft.test.ts
typechain-types/: SimpleVendorRegistry.ts  StandaloneBookingEscrow.ts  hardhat.d.ts  index.ts
typechain-types/factories/: SimpleVendorRegistry__factory.ts  StandaloneBookingEscrow__factory.ts  index.ts
(+51 files in other folders)
